@@ -312,6 +312,8 @@ about JIT compile failures in pcre2test.
 93. Re-arrange valgrind support code in pcre2test to avoid spurious reports 
 with JIT (possibly caused by SSE2?).
 
+94. Support offset_limit in JIT.
+
 
 Version 10.20 30-June-2015
 --------------------------
